--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "compiler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.26.1",
-    "cluster": "^0.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "strip-comments": "^2.0.1",
-    "tress": "^1.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "compiler",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write .",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.26.1",
+        "cluster": "^0.7.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "express": "^4.17.3",
+        "express-validation": "^4.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "strip-comments": "^2.0.1",
+        "tress": "^1.1.4"
+    },
+    "devDependencies": {
+        "eslint": "^8.18.0",
+        "nodemon": "^2.0.15",
+        "prettier": "2.7.1"
+    }
 }
