--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "node server.js",
+        "dev":"nodemon server.js"
     },
     "keywords": [],
     "author": "",
